# security-requirements-generator

./: .dockerignore  .gitignore  README.md  docker-compose.yml
back/: .env.dev  .env.docker  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  docker-entrypoint.sh  manage.py  pyproject.toml
back/apps/api/: apps.py  base_test.py  urls.py  views.py
back/apps/api/serializers/: __init__.py  additional_logo.py  assessment_button.py  category.py  export_request.py  product.py  requirement.py
back/apps/api/tests/: test_create_export_request.py
back/apps/common/: admin.py  apps.py  base_test.py  models.py  utils.py  views.py
back/apps/common/migrations/: 0001_initial.py  0002_auto_20201225_2049.py  0003_auto_20201225_2050.py  0004_auto_20210102_1136.py  0005_assessmentbutton.py  0006_additionallogo.py
back/apps/requirement/: admin.py  apps.py  models.py  tasks.py  translation.py
back/apps/requirement/migrations/: 0001_initial.py  0002_auto_20201223_2015.py  0003_auto_20201223_2040.py  0004_auto_20201223_2045.py  0005_auto_20201223_2052.py  0006_auto_20201223_2102.py  0007_auto_20201224_1051.py  0008_auto_20201224_1053.py  0009_auto_20201224_1053.py  0010_exportrequest.py  0011_exportrequest_language.py  0012_auto_20201225_2049.py  0013_auto_20210102_1149.py  0014_auto_20210103_1005.py  0015_auto_20210105_1541.py  0016_auto_20210701_1725.py  0017_product.py
back/project/: settings.py  urls.py
back/project/fixtures/: auth.group.json  common.json  requirement.json
back/project/templates/: 404.html  500.html  base_error.html  export.html  robots.txt
(+32 files in other folders)
